--- a/deistler_our_data_and_morph/config/train.yaml
+++ b/deistler_our_data_and_morph/config/train.yaml
@@ -15,8 +15,13 @@ reduce_lr_every: 800
 reduce_lr_by: 5 #10.0
 beta: 0.99
 soma_radius: 7.5
+
+# offset and scale
 output_scale: 35.0
 output_offset: -1.5
+# scale_tranable: true
+# offset_trainable: true
+
 weight_init: 0.1 #"random"
 batchsize:  2
 rec_ids: [0,1,2] #[1,2,3,4,5,6,7] #[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]
@@ -33,6 +38,9 @@ eval_every_nth_batch: 100
 start_n_scan: 100
 nseg: 4
 reuse_avg_recordings: false
+
+
+
 
 hydra:
   run:
