added experiment section

--- a/deistler_our_data_and_morph/debugging/config/create_training_figs.yaml
+++ b/deistler_our_data_and_morph/debugging/config/create_training_figs.yaml
@@ -3,6 +3,6 @@ plot_type: ['all'] #['rhos_meas_over_epochs']
 cell_id: '2020-08-29_1' 
 rec_ids: [0,1,2] 
 start_n_scan: 100
-num_datapoints_per_scanfield: 512 #64
+num_datapoints_per_scanfield: 64
 nseg: 4
-selected_type: 'train' # 'val' or 'test' or 'train'
+selected_type: 'val' # 'val' or 'test' or 'train'
