--- a/deistler_our_data_and_morph/config/train.yaml
+++ b/deistler_our_data_and_morph/config/train.yaml
@@ -8,31 +8,35 @@ debugging_figs: ['recording_comps_and_rois']
 cell_id: "2020-08-29_1"
 
 # training specifics
-lr: 0.005
+lr: 0.01
 momentum: 0.5
-iterations: 200
-reduce_lr_every: 800
-reduce_lr_by: 5 #10.0
+iterations: 320
+reduce_lr_every: 100
+reduce_lr_by: 10.0
 beta: 0.99
 soma_radius: 7.5
-output_scale: 35.0
-output_offset: -1.5
+output_scale: 40 #25.0
+output_offset: -1.5 #-2
+
+scale_by_bc_number: true
+
 weight_init: 0.1 #"random"
-batchsize:  2
+batchsize: 2 
 rec_ids: [0,1,2] #[1,2,3,4,5,6,7] #[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]
-num_datapoints_per_scanfield: 64 #1024
+num_datapoints_per_scanfield: 64 #512 #1024
 val_frac:  0.25
-test_num: 8 #128
-vis: true
+test_num: 8 #64 #128
+vis: false
 seed_weights: 10
 seed_membrane_conds: 0
 seed_tf_dataloader: 0
 seed_tf_train_loop: 0
 seed_ruler: 0
-eval_every_nth_batch: 100
+eval_every_nth_batch: 1000
 start_n_scan: 100
 nseg: 4
 reuse_avg_recordings: false
+evaluate_before_training: false
 
 hydra:
   run:
