--- a/deistler_our_data_and_morph/debugging/config/rf_plots.yaml
+++ b/deistler_our_data_and_morph/debugging/config/rf_plots.yaml
@@ -1,13 +1,13 @@
 results_dir: None
 plot_type: 'all'
 cell_id: '2020-08-29_1' 
-rec_ids: [2] 
+rec_ids: [0,1,2] 
 start_n_scan: 100
 num_datapoints_per_scanfield: 64
 nseg: 4
 split: 'train'
 epoch: 'latest'
-counters: [0,1,2,3] # which rois to plot
+counters: ['all'] # which rois to plot
 
 # types of plots wanted
 plot_types: ['comparison_prediction_label_rf','prediction_rf']
